--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,10 +1,18 @@
 .Homepage {
     background-color:rgb(0, 0, 0);
-    min-height: 95vh;
+    height:100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     font-size: calc(10px + 2vmin);
     color: white;
+  }
+  
+  .fadeDiv {
+    overflow: hidden;
+  }
+
+  .mainContent {
+    height: 100vh;
   }
